# RHAssessmentsPython3

./: .editorconfig  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  index.html  pre-commit-config.yaml  pyproject.toml
app/: manage.py
app/accounts/: __init__.py  managers.py  models.py  urls.py  views.py
app/accounts/migrations/: 0001_initial.py
app/assessments/: __init__.py  admin.py  apps.py  forms.py  models.py  tasks.py  urls.py  views.py
app/audit/: __init__.py  admin.py  apps.py  models.py  urls.py  views.py
app/billing/: __init__.py  admin.py  apps.py  forms.py  models.py  tasks.py  urls.py  views.py  webhook_urls.py
app/core/: __init__.py  asgi.py  celery.py  context_processors.py  db.py  fields.py  middleware.py  settings.py  urls.py  utils.py  wsgi.py
app/dashboard/: __init__.py  models.py  urls.py  views.py
app/emails/: __init__.py  admin.py  apps.py  forms.py  models.py  tasks.py  urls.py  utils.py  views.py
app/organizations/: __init__.py  forms.py  mixins.py  models.py  urls.py  views.py
app/organizations/migrations/: 0001_initial.py  0002_enable_rls.py
app/pdi/: __init__.py  admin.py  apps.py  forms.py  models.py  tasks.py  urls.py  views.py
app/recruiting/: __init__.py  admin.py  apps.py  forms.py  mixins.py  models.py  urls.py  views.py
app/reports/: __init__.py  admin.py  apps.py  forms.py  models.py  tasks.py  urls.py  views.py
app/templates/: base.html  health.html
app/templates/account/: email_confirm.html  email_confirmation_sent.html  login.html  logout.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  signup.html
app/templates/accounts/: change_password.html  edit_profile.html  profile.html  settings.html
app/templates/assessments/: assessment_definition_form.html  assessment_definition_list.html  assessment_detail.html  assessment_instance_list.html  assessment_invite.html  assessment_result.html  assessment_take.html
app/templates/audit/: my_data.html  privacy_policy.html  terms_of_service.html
app/templates/billing/: dashboard.html  invoice_list.html  payment_method.html  subscribe.html  usage_report.html
app/templates/dashboard/: home.html  super_admin.html
app/templates/emails/: analytics.html  bulk_email.html  dashboard.html  template_form.html  template_list.html  unsubscribe.html  unsubscribe_success.html
app/templates/organizations/: create.html  create_department.html  create_employee.html  create_position.html  departments.html  detail.html  employees.html  import_employees.html  invite.html  list.html  members.html  positions.html  settings.html  update.html  update_department.html  update_employee.html  update_position.html
app/templates/pdi/: bulk_generation.html  dashboard.html  pdi_plan_detail.html  pdi_plan_form.html  pdi_plan_list.html  pdi_task_form.html
app/templates/recruiting/: candidate_detail.html  candidate_form.html  candidate_list.html  client_list.html  dashboard.html  job_detail.html  job_form.html  job_list.html
app/templates/reports/: analytics.html  dashboard.html  quick_report.html  report_detail.html  report_generate.html  report_list.html
app/templates/socialaccount/: connections.html  signup.html
